--- a/public/stylesheets/other_profile.css
+++ b/public/stylesheets/other_profile.css
@@ -189,6 +189,26 @@ nav .right {
     transition: background 0.2s, color 0.2s;
 }
 
+#followBtn {
+  width: 100%;
+  height: 40px;
+  border-radius: 30px;
+  background-color: #42242a;
+  color: #fff;
+  font-family: 'Figtree', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  border: none;
+  cursor: pointer;
+  transition: background 0.2s, color 0.2s;
+}
+
+#followBtn.following {
+  border: 3px solid #42242a;
+  background-color: transparent;
+  color: #42242a;
+}
+
 
 .main {
     width: 65vw;
